# 2DPoissonSolver

./: CMakeLists.txt  README.md  build.sh
cmakefile/: CMakeLists.txt  CMakeLists_static.txt
src/: Auxiliary_module.cpp  Auxiliary_module.h  BoundaryCondition.cpp  BoundaryCondition.h  BoundaryData.h  Core_Export.h  ElementCalculator.cpp  ElementCalculator.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FiniteElementCalculator.cpp  FiniteElementCalculator.h  Help.cpp  Help.h  Mesh.cpp  Mesh.h  PoissonSolver.cpp  PoissonSolver.h  PoissonSolverBase.cpp  PoissonSolverBase.h  PoissonSolverDense.cpp  PoissonSolverDense.h  PoissonSolverSparse.cpp  PoissonSolverSparse.h  PoissonSolver_FiniteElementData.h  ReadInput.cpp  ReadInput.h  ReadInputData.cpp  ReadInputData.h  RunPoissonSolver.cpp  RunPoissonSolver.h  Timer.cpp  Timer.h  input.json  input_new.json  main.cpp  results.vtk
test/: test_ElementCalculator.cpp  test_ExpressionEvaluator.cpp  test_Mesh.cpp  test_ReadInput.cpp  test_ReadInputData.cpp
